@@ -326,6 +326,9 @@ int fcache_test_cache_value_free(
 	 "error",
 	 error );
 
+	libcerror_error_free(
+	 &error );
+
 	/* Initialize test
 	 */
 	result = libfcache_cache_value_initialize(
@@ -423,7 +426,7 @@ on_error:
 		 NULL );
 	}
 #endif
-	return( 1 );
+	return( -1 );
 }
 
 #if defined( __GNUC__ ) && !defined( LIBFCACHE_DLL_IMPORT )
@@ -720,6 +723,124 @@ on_error:
 	return( 0 );
 }
 
+/* Tests the libfcache_cache_value_get_cache_index function
+ * Returns 1 if successful or 0 if not
+ */
+int fcache_test_cache_value_get_cache_index(
+     void )
+{
+	libcerror_error_t *error             = NULL;
+	libfcache_cache_value_t *cache_value = NULL;
+	int cache_index                      = 0;
+	int result                           = 0;
+
+	/* Initialize test
+	 */
+	result = libfcache_cache_value_initialize(
+	          &cache_value,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NOT_NULL(
+	 "cache_value",
+	 cache_value );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	/* Test regular cases
+	 */
+	result = libfcache_cache_value_get_cache_index(
+	          cache_value,
+	          &cache_index,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	/* Test error cases
+	 */
+	result = libfcache_cache_value_get_cache_index(
+	          NULL,
+	          &cache_index,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 -1 );
+
+	FCACHE_TEST_ASSERT_IS_NOT_NULL(
+	 "error",
+	 error );
+
+	libcerror_error_free(
+	 &error );
+
+	result = libfcache_cache_value_get_cache_index(
+	          cache_value,
+	          NULL,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 -1 );
+
+	FCACHE_TEST_ASSERT_IS_NOT_NULL(
+	 "error",
+	 error );
+
+	libcerror_error_free(
+	 &error );
+
+	/* Clean up
+	 */
+	result = libfcache_cache_value_free(
+	          &cache_value,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "cache_value",
+	 cache_value );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	return( 1 );
+
+on_error:
+	if( error != NULL )
+	{
+		libcerror_error_free(
+		 &error );
+	}
+	if( cache_value != NULL )
+	{
+		libfcache_cache_value_free(
+		 &cache_value,
+		 NULL );
+	}
+	return( 0 );
+}
+
 /* Tests the libfcache_cache_value_set_identifier function
  * Returns 1 if successful or 0 if not
  */
@@ -773,6 +894,106 @@ int fcache_test_cache_value_set_identifier(
 	          NULL,
 	          0,
 	          0,
+	          0,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 -1 );
+
+	FCACHE_TEST_ASSERT_IS_NOT_NULL(
+	 "error",
+	 error );
+
+	libcerror_error_free(
+	 &error );
+
+	/* Clean up
+	 */
+	result = libfcache_cache_value_free(
+	          &cache_value,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "cache_value",
+	 cache_value );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	return( 1 );
+
+on_error:
+	if( error != NULL )
+	{
+		libcerror_error_free(
+		 &error );
+	}
+	if( cache_value != NULL )
+	{
+		libfcache_cache_value_free(
+		 &cache_value,
+		 NULL );
+	}
+	return( 0 );
+}
+
+/* Tests the libfcache_cache_value_set_cache_index function
+ * Returns 1 if successful or 0 if not
+ */
+int fcache_test_cache_value_set_cache_index(
+     void )
+{
+	libcerror_error_t *error             = NULL;
+	libfcache_cache_value_t *cache_value = NULL;
+	int result                           = 0;
+
+	/* Initialize test
+	 */
+	result = libfcache_cache_value_initialize(
+	          &cache_value,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NOT_NULL(
+	 "cache_value",
+	 cache_value );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	/* Test regular cases
+	 */
+	result = libfcache_cache_value_set_cache_index(
+	          cache_value,
+	          0,
+	          &error );
+
+	FCACHE_TEST_ASSERT_EQUAL_INT(
+	 "result",
+	 result,
+	 1 );
+
+	FCACHE_TEST_ASSERT_IS_NULL(
+	 "error",
+	 error );
+
+	/* Test error cases
+	 */
+	result = libfcache_cache_value_set_cache_index(
+	          NULL,
 	          0,
 	          &error );
 
@@ -1172,8 +1393,16 @@ int main(
 	 fcache_test_cache_value_get_identifier );
 
 	FCACHE_TEST_RUN(
+	 "libfcache_cache_value_get_cache_index",
+	 fcache_test_cache_value_get_cache_index );
+
+	FCACHE_TEST_RUN(
 	 "libfcache_cache_value_set_identifier",
 	 fcache_test_cache_value_set_identifier );
+
+	FCACHE_TEST_RUN(
+	 "libfcache_cache_value_set_cache_index",
+	 fcache_test_cache_value_set_cache_index );
 
 	FCACHE_TEST_RUN(
 	 "libfcache_cache_value_get_value",
