@@ -1,6 +1,7 @@
 TODO
 * remove libfcache_cache_clone
 * remove libfcache_cache_resize
+* deprecate libfcache_cache_get_value_by_index?
 * deprecate libfcache_cache_set_value_by_index?
 
 20121211
